// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dashboard-grid render default 1`] = `

<div>
  <div class="flex h-full max-h-[calc(100svh-65px-50px-2px-16px)] flex-col overflow-y-scroll px-8 py-8">
    <div class="grid w-full max-w-8xl grid-cols-3 gap-2 pb-8 md:flex">
      <gui-filter-search
        placeholder="Filter Projects"
        items
        classname="col-span-3 w-full"
      >
      </gui-filter-search>
      <div class="col-span-3 flex gap-2">
        <gui-dashboard-view-toggle currentview="grid">
        </gui-dashboard-view-toggle>
        <div style="opacity: 1;">
          <gui-sort-dropdown
            items
            sortkey="name"
          >
          </gui-sort-dropdown>
        </div>
        <gui-button
          aschild="true"
          classname="ml-auto"
        >
          <gui-nav-link to="/create-new-project">
            <gui-plus-icon size="24">
            </gui-plus-icon>
            Create New Project
          </gui-nav-link>
        </gui-button>
      </div>
    </div>
    <div
      class="flex w-full max-w-8xl flex-col"
      style="opacity: 0; transform: translateY(-5px);"
    >
      <p class="mb-4 text-sm font-semibold">
        Projects
      </p>
      <div class="grid grid-cols-1 gap-x-6 gap-y-6 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
        <p>
          No projects found
        </p>
      </div>
    </div>
  </div>
</div>

`;

exports[`dashboard-grid with results 1`] = `

<div>
  <div class="flex h-full max-h-[calc(100svh-65px-50px-2px-16px)] flex-col overflow-y-scroll px-8 py-8">
    <div class="grid w-full max-w-8xl grid-cols-3 gap-2 pb-8 md:flex">
      <gui-filter-search
        placeholder="Filter Projects"
        items="[object Object],[object Object]"
        classname="col-span-3 w-full"
      >
      </gui-filter-search>
      <div class="col-span-3 flex gap-2">
        <gui-dashboard-view-toggle currentview="grid">
        </gui-dashboard-view-toggle>
        <div style="opacity: 1;">
          <gui-sort-dropdown
            items="[object Object],[object Object]"
            sortkey="name"
          >
          </gui-sort-dropdown>
        </div>
        <gui-button
          aschild="true"
          classname="ml-auto"
        >
          <gui-nav-link to="/create-new-project">
            <gui-plus-icon size="24">
            </gui-plus-icon>
            Create New Project
          </gui-nav-link>
        </gui-button>
      </div>
    </div>
    <div
      class="flex w-full max-w-8xl flex-col"
      style="opacity: 0; transform: translateY(-5px);"
    >
      <p class="mb-4 text-sm font-semibold">
        Projects
      </p>
      <div class="grid grid-cols-1 gap-x-6 gap-y-6 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
        <div
          role="link"
          class="group relative w-full cursor-default"
        >
          <div class="relative flex h-24 items-center overflow-hidden rounded-t-lg border-x-[1px] border-t-[1px] border-muted bg-card transition-all group-hover:bg-card-accent">
            <div class="flex px-3 py-2">
              <gui-card-title classname="text-md z-[1] font-medium">
                project-bar
              </gui-card-title>
            </div>
            <div class="absolute right-0 top-0 z-[1] flex flex-row rounded-sm px-3 py-2 backdrop-blur-[1px]">
              <p class="z-[1] text-[0.7rem] text-muted-foreground">
                November 1st, 2024 | 06:01 PM
              </p>
            </div>
            <div class="absolute -inset-4 -right-2 flex flex-row items-center justify-end gap-2 bg-clip-content">
              <gui-package-manager-pnpm-icon
                size="120"
                classname="stroke-0 text-neutral-200/80 dark:text-neutral-800/40"
              >
              </gui-package-manager-pnpm-icon>
            </div>
          </div>
          <div class="flex w-full items-center rounded-b-lg border-[1px] border-muted bg-card px-3 py-3 transition-all group-hover:bg-card-accent">
            <gui-tooltip-provider>
              <gui-tooltip>
                <gui-tooltip-trigger classname="truncate text-left text-xs text-muted-foreground">
                  ~/project-foo
                </gui-tooltip-trigger>
                <gui-tooltip-content>
                  ~/project-foo
                </gui-tooltip-content>
              </gui-tooltip>
            </gui-tooltip-provider>
          </div>
        </div>
        <div
          role="link"
          class="group relative w-full cursor-default"
        >
          <div class="relative flex h-24 items-center overflow-hidden rounded-t-lg border-x-[1px] border-t-[1px] border-muted bg-card transition-all group-hover:bg-card-accent">
            <div class="flex px-3 py-2">
              <gui-card-title classname="text-md z-[1] font-medium">
                project-foo
              </gui-card-title>
            </div>
            <div class="absolute right-0 top-0 z-[1] flex flex-row rounded-sm px-3 py-2 backdrop-blur-[1px]">
              <p class="z-[1] text-[0.7rem] text-muted-foreground">
                November 1st, 2024 | 06:01 PM
              </p>
            </div>
            <div class="absolute -inset-4 -right-2 flex flex-row items-center justify-end gap-2 bg-clip-content">
              <gui-package-manager-vlt-icon
                size="120"
                classname="stroke-0 text-neutral-200/80 dark:text-neutral-800/40"
              >
              </gui-package-manager-vlt-icon>
              <gui-runtime-node-icon
                size="120"
                classname="stroke-0 text-neutral-200/80 dark:text-neutral-800/40"
              >
              </gui-runtime-node-icon>
            </div>
          </div>
          <div class="flex w-full items-center rounded-b-lg border-[1px] border-muted bg-card px-3 py-3 transition-all group-hover:bg-card-accent">
            <gui-tooltip-provider>
              <gui-tooltip>
                <gui-tooltip-trigger classname="truncate text-left text-xs text-muted-foreground">
                  ~/project-foo
                </gui-tooltip-trigger>
                <gui-tooltip-content>
                  ~/project-foo
                </gui-tooltip-content>
              </gui-tooltip>
            </gui-tooltip-provider>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>

`;
